# ailuropoda

./: .gitignore  CMakeLists.txt  README.md  TODO.md  cbor_codegen.py  dependency.cmake  my_data.c  my_data.h  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
cmake/Modules/: Finddoctest.cmake  Findtinycbor.cmake
examples/: cdecl.py
src/: cbor_codegen.py
src/ailuropoda/: cbor_codegen.py
src/ailuropoda/templates/: CMakeLists.txt.jinja
templates/: CMakeLists.txt.jinja  c_test_harness_simple_data.c.jinja  c_test_harness_simple_data.cpp.jinja  cbor_generated.c.jinja  cbor_generated.h.jinja
tests/: test_cbor_codegen.py
tests/integration/: CMakeLists.txt  simple_data.h  simple_data_test_harness.cpp  test_full_pipeline.py
